6946: build script -> build agent, run agent example